--- a/info/story.html
+++ b/info/story.html
@@ -1,3 +1,14 @@
 <p>
-
+С приближением Нового Года все с нетерпением ждут визита Деда Мороза. 
+Он приходит с огромным мешком подарков, и один из них может достаться 
+тебе. Но как выбрать лучший – ведь Дед Мороз достаёт их из мешка по 
+одному, предлагает, а если откажешься – прячет снова в мешок и больше 
+уже не достанет. Как обидно, когда последним предметом из мешка 
+оказывается кукла, а ты уже отказался от шляпы пирата, потому что 
+надеялся заполучить шпагу!
+</p>
+<p>
+Когда такое случилось с Ваней, папа сказал ему – не переживай, я 
+научу тебя, как выбирать подарок получше. Ты ведь знал, сколько всего 
+подарков в мешке?
 </p>
