--- a/info/task_description.html
+++ b/info/task_description.html
@@ -3,7 +3,10 @@
 </p>
 
 <p>
-    <strong>Входные данные:</strong><br>
+    <strong>Входные данные:</strong>
+</p>
+<p>
+   
 total_gifts - число подарков в мешке – int<br>
 bag_of_santa_claus - мешок Деда Мороза – generator, returns float (ценность подарка в глазах Вани, положителное)<br>
 accept – принять подарок - callback function
@@ -14,9 +17,7 @@ accept – принять подарок - callback function
 </p>
 
 
-
 <div class="for_info_only">
-    <p><i>( Put some usage examples )</i></p>
     <p>
         <strong>Example:</strong>
     </p>
@@ -68,12 +69,12 @@ if __name__ == '__main__':
     <strong>Как использовать:</strong>
 </p>
 Например при выборе места катапультирования лётчика из неисправного самолёта – чтобы безопасно приземлиться:)
+</p>
 <p>
-    <strong>Precondition:</strong>
+    <strong>Ограничения на входные даннык:</strong>
 </p>
 
 <p>
-    10 &gt;= total_gifts &gt; 1000
-    0 &gt; gift
+    10 &lt;= total_gifts &lt; 1000
+    0 &lt; gift
 </p>
-
