--- a/info/task_description.html
+++ b/info/task_description.html
@@ -19,49 +19,35 @@ accept – принять подарок - callback function
 
 <div class="for_info_only">
     <p>
-        <strong>Example:</strong>
+        <strong>Примеры реализации (они не решают задачу, а только демонстрируют API):</strong>
     </p>
+<p>Первый:</p>
     <pre class="brush: python">
 def choose_good_gift(total_gifts, bag_of_santa_claus, accept_gift):
-    i = 0
     for gift in bag_of_santa_claus():
-        if i == total_gifts // 2:  # no time to wait!
+        if gift > 9.:  # I know max(gifts) :)
             accept_gift()
             return
-        i += 1
+    </pre>
+<p>Второй:</p>
+    <pre class="brush: python">
+def choose_good_gift(total_gifts, bag_of_santa_claus, accept_gift):
+    for i, gift in enumerate(iter(bag_of_santa_claus())):
+        if i == total_gifts // 2:  # on the middle
+            accept_gift()
+            return
+    </pre>
+<p>Пример вызова с аргументами:</p>
+    <pre class="brush: python">
+gifts = [0.65, 4.75, 0.21, 0.53, 0.63, 9.99, 0.81, 2.48, 0.3, 0.64]
 
+def gift_generator():
+    yield from gifts
 
-if __name__ == '__main__':
-    # This part is using only for self-checking and not necessary for auto-testing
-    def gift_priority_post_factum(gifts):
-        def do_accept():
-            nonlocal gift_value
-            if gift_value is None:
-                gift_value = gifts[idx]
-            else:
-                print('Sorry, you made your choice already.')
+def do_accept():
+    pass
 
-        def gift_generator():
-            nonlocal idx
-            for idx, y in enumerate(gifts):
-                yield y
-
-        idx, gift_value = 0, None
-        choose_good_gift(len(gifts), gift_generator, do_accept)
-        if gift_value is None:
-            print('Unfortunately, you did not choose anything.')
-            return len(gifts)
-        else:
-            return sum(gift_value < x for x in gifts)
-
-    def check_solution():
-        n = gift_priority_post_factum([0.65, 4.75, 0.21, 0.53, 0.63, 9.99, 0.81, 2.48, 0.3, 0.64])
-        if n < 3:
-            print({0: 'The best gift!', 1: 'Next best gift!', 3: 'Third gift!'}[n])
-        else:
-            print('Only {:n}th gift.'.format(n))
-
-    check_solution()
+choose_good_gift(len(gifts), gift_generator, do_accept)
     </pre>
 </div>
 
@@ -71,7 +57,7 @@ if __name__ == '__main__':
 Например при выборе места катапультирования лётчика из неисправного самолёта – чтобы безопасно приземлиться:)
 </p>
 <p>
-    <strong>Ограничения на входные даннык:</strong>
+    <strong>Ограничения на входные данные:</strong>
 </p>
 
 <p>
