--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,4 +1,22 @@
 <p>
+    <strong>Мешок Деда Мороза</strong>
+</p>
+<p>
+С приближением Нового Года все с нетерпением ждут визита Деда Мороза. 
+Он приходит с огромным мешком подарков, и один из них может достаться 
+тебе. Но как выбрать лучший – ведь Дед Мороз достаёт их из мешка по 
+одному, предлагает, а если откажешься – спрячет снова в мешок и больше 
+уже не достанет. Как обидно, когда последним предметом из мешка 
+оказывается кукла, а ты уже отказался от шляпы пирата, потому что 
+надеялся заполучить шпагу!
+</p>
+<p>
+Когда такое случилось с Ваней, папа сказал ему – не переживай, я 
+научу тебя, как выбирать подарок получше. Ты ведь знал, сколько всего 
+подарков в мешке?
+</p>
+
+<p>
     <i>Выбрать из потока чисел заранее известной длинны по возможности наибольшее.</i>
 </p>
 
@@ -7,8 +25,12 @@
 </p>
 <p>
    
-total_gifts - число подарков в мешке – int<br>
-bag_of_santa_claus - мешок Деда Мороза – generator, returns float (ценность подарка в глазах Вани, положителное)<br>
+total_gifts - число подарков в мешке – int
+</p>
+<p>
+bag_of_santa_claus - мешок Деда Мороза – generator, returns float (ценность подарка в глазах Вани, положителное)
+</p>
+<p>
 accept – принять подарок - callback function
 </p>
 
@@ -62,5 +84,7 @@ choose_good_gift(len(gifts), gift_generator, do_accept)
 
 <p>
     10 &lt;= total_gifts &lt; 1000
+</p>
+<p>
     0 &lt; gift
 </p>
