--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,75 +1,72 @@
 <p>
-    <strong>Мешок Деда Мороза</strong>
-</p>
+     <strong>Bag of Santa Claus</ strong>
+</ p>
 <p>
-С приближением Нового Года все с нетерпением ждут визита Деда Мороза. 
-Он приходит с огромным мешком подарков, и один из них может достаться 
-тебе. Но как выбрать лучший – ведь Дед Мороз достаёт их из мешка по 
-одному, предлагает, а если откажешься – спрячет снова в мешок и больше 
-уже не достанет. Как обидно, когда последним предметом из мешка 
-оказывается кукла, а ты уже отказался от шляпы пирата, потому что 
-надеялся заполучить шпагу!
-</p>
+When New Year is coming everybody waits the visit of Santa Claus. He 
+comes with a huge bag of gifts, and you can take any. But how to 
+make the best choose - so Santa gets them out of the bag one at a 
+time, and if you don't like it - puts it again to bag forever. What 
+a disappointment, when the last thing from the bag is a doll, and 
+you have already refused to pirate hat because hoping to get a saber!
+</ p>
 <p>
-Когда такое случилось с Ваней, папа сказал ему – не переживай, я 
-научу тебя, как выбирать подарок получше. Ты ведь знал, сколько всего 
-подарков в мешке?
-</p>
+When this happened with John, Dad told him - don't worry, I teach 
+you how to choose a better gift. Did you knew how much gifts in the 
+bag?
+</ p>
 
 <p>
-<i>Выбрать из потока чисел заранее известной длинны по 
-возможности наибольшее.</i>
-</p>
+<i>Get possibly greatest number from the flow with known length.</ i>
+</ p>
 
 <p>
-<strong>Входные данные:</strong>
-</p>
-<p>  
-total_gifts - число подарков в мешке – int
-</p>
+<strong> Input: </ strong>
+</ p>
 <p>
-bag - мешок Деда Мороза – функция-генератор, возвращает float (ценность 
-подарка в глазах Вани, положительное)
-</p>
+total_gifts - the number of gifts in the bag, int
+</ p>
 <p>
-accept – принять подарок - функция обратного вызова (callback function)
-</p>
+bag - generator function returns a float (values of gifts for John, 
+positive)
+</ p>
+<p>
+accept - callback function (call it, if you like gift)
+</ p>
 
 <p>
-<strong>Выходные данные: </strong> Нет. 
-</p>
+<strong> Imprint: </ strong> None.
+</ p>
 
 <div class="for_info_only">
 <p>
-<strong>Примеры реализации (они только демонстрируют API):</strong>
-</p>
-<p>Первый:</p>
-    <pre class="brush: python">
-def choose_good_gift(total_gifts, bag, accept_gift):
-    for gift in bag():
-        if gift >= 1000000:  # I want million!
-            accept_gift()
-            return
-    </pre>
-<p>Второй:</p>
-    <pre class="brush: python">
-def choose_good_gift(total_gifts, bag, accept_gift):
-    for i, gift in enumerate(iter(bag())):
-        if i == total_gifts // 2:  # on the middle
-            accept_gift()
-            return
-    </pre>
+<strong> Implementation examples (only to demonstrate the API): </ strong>
+</ p>
+<p> First: </ p>
+     <pre class="brush: python">
+def choose_good_gift (total_gifts, bag, accept_gift):
+     for gift in bag ():
+         if gift> = 1000000: # I want million!
+             accept_gift ()
+             return
+     </ pre>
+<p> Second: </ p>
+     <pre class="brush: python">
+def choose_good_gift (total_gifts, bag, accept_gift):
+     for i, gift in enumerate (iter (bag ())):
+         if i == total_gifts / / 2: # on the middle
+             accept_gift ()
+             return
+     </ pre>
 
 <p class="for_info_only">
-<strong>Как использовать:</strong>
-</p>
-Например при выборе места катапультирования лётчика из неисправного 
-самолёта – чтобы безопасно приземлиться :)
-</p>
+<strong> How to use: </ strong>
+</ p>
+For example, to choose time for catapult from the faulty aircraft - 
+to land safely :)
+</ p>
 <p>
-<strong>Ограничения на входные данные:</strong>
-</p>
-
+<strong>Precondition:</ strong>
+</ p>
 <p>
 10 &lt;= total_gifts &lt; 1000
 </p>
