--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -74,5 +74,8 @@ def choose_good_gift(total_gifts, bag, accept_gift):
 10 &lt;= total_gifts &lt; 1000
 </p>
 <p>
-0 &lt; gift
+0 &lt;= gift
+</p>
+<p>
+Подарки извлекаются из мешка в случайном порядке.
 </p>
