--- a/info/task_description.html
+++ b/info/task_description.html
@@ -72,5 +72,8 @@ to land safely :)
 10 &lt;= total_gifts &lt; 1000
 </p>
 <p>
-0 &lt; gift
+0 &lt;= gift
+</p>
+<p>
+Gifts are offered in random order.
 </p>
