--- a/info/task_description.html
+++ b/info/task_description.html
@@ -69,7 +69,7 @@ to land safely :)
 <strong>Precondition:</strong>
 </p>
 <p>
-10 &lt;= total_gifts &lt; 1000
+10 &lt;= total_gifts &lt;= 1000
 </p>
 <p>
 0 &lt;= gift
