--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -71,7 +71,7 @@ def choose_good_gift(total_gifts, bag, accept_gift):
 </p>
 
 <p>
-10 &lt;= total_gifts &lt; 1000
+10 &lt;= total_gifts &lt;= 1000
 </p>
 <p>
 0 &lt;= gift
