--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,47 +1,47 @@
 <p>
-     <strong>Bag of Santa Claus</strong>
+    <strong>Bag of Santa Claus</strong>
 </p>
 <p>
-When New Year is coming everybody waits the visit of Santa Claus. He 
-comes with a huge bag of gifts, and you can take any. But how to 
-make the best choose - so Santa gets them out of the bag one at a 
-time, and if you don't like it - puts it again to bag forever. What 
-a disappointment, when the last thing from the bag is a doll, and 
-you have already refused to pirate hat because hoping to get a saber!
+    When New Year is coming everybody waits the visit of Santa Claus.
+    He comes with a huge bag of gifts, and you can take any.
+    But how to make the best choose - so Santa gets them out of the bag one at a time,
+    and if you don't like it - puts it again to bag forever.
+    What a disappointment, when the last thing from the bag is a doll,
+    and you have already refused to pirate hat because hoping to get a saber!
 </p>
 <p>
-When this happened with John, Dad told him - don't worry, I teach 
-you how to choose a better gift. Did you knew how much gifts in the 
-bag?
-</p>
-
-<p>
-<i>Get possibly greatest number from the flow with known length.</i>
+    When this happened with John, Dad told him - don't worry,
+    I teach you how to choose a better gift. Did you knew how much gifts in the bag?
 </p>
 
 <p>
-<strong> Input: </strong>
-</p>
-<p>
-total_gifts - the number of gifts in the bag, int
-</p>
-<p>
-bag - generator function returns a float (values of gifts for John, 
-positive)
-</p>
-<p>
-accept - callback function (call it, if you like gift)
+    <i>Get possibly greatest number from the flow with known length.</i>
 </p>
 
 <p>
-<strong> Imprint: </strong> None.
+    <strong> Input: </strong>
+</p>
+<p>
+    total_gifts - the number of gifts in the bag, int
+</p>
+<p>
+    bag - generator function returns a float (values of gifts for John,
+    positive)
+</p>
+<p>
+    accept - callback function (call it, if you like gift)
+</p>
+
+<p>
+    <strong> Imprint: </strong> None.
 </p>
 
 <div class="for_info_only">
-<p>
-<strong> Implementation examples (only to demonstrate the API): </strong>
-</p>
-<p> First: </p>
+    <p>
+        <strong> Implementation examples (only to demonstrate the API): </strong>
+    </p>
+
+    <p> First: </p>
     <pre class="brush: python">
 def choose_good_gift(total_gifts, bag, accept_gift):
     for gift in bag():
@@ -50,7 +50,7 @@ def choose_good_gift(total_gifts, bag, accept_gift):
             return
     </pre>
 
-<p> Second: </p>
+    <p> Second: </p>
     <pre class="brush: python">
 def choose_good_gift(total_gifts, bag, accept_gift):
     for i, gift in enumerate(iter(bag())):
@@ -58,22 +58,16 @@ def choose_good_gift(total_gifts, bag, accept_gift):
             accept_gift()
             return
     </pre>
+</div>
 
 <p class="for_info_only">
-<strong> How to use: </strong>
+    <strong> How to use: </strong>
+    For example, to choose time for catapult from the faulty aircraft -
+    to land safely :)
 </p>
-For example, to choose time for catapult from the faulty aircraft - 
-to land safely :)
-</p>
+
 <p>
-<strong>Precondition:</strong>
-</p>
-<p>
-10 &lt;= total_gifts &lt;= 1000
-</p>
-<p>
-0 &lt;= gift
-</p>
-<p>
-Gifts are offered in random order.
-</p>
+    <strong>Precondition:</strong><br>
+    10 &le; total_gifts &le; 1000<br>
+    0 &le; gift<br>
+    Gifts are offered in random order.<br>
