--- a/info/task_description.html
+++ b/info/task_description.html
@@ -27,9 +27,9 @@
 
 <p>
     <strong> Input: </strong> Three arguments.<br>
-    <strong>total_gifts</strong> - a number of gifts in a bag as an integer.<br>
-    <strong>bag</strong> - a generator that returns a float values of gifts.<br>
-    <strong>accept_gift</strong> - the callback function which you should call to accept gift.
+    <em>total_gifts</em> - a number of gifts in a bag as an integer.<br>
+    <em>bag</em> - a generator that returns a float values of gifts.<br>
+    <em>accept_gift</em> - the callback function which you should call to accept gift.
 </p>
 
 <p>
