--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -8,19 +8,13 @@
 одному, предлагает, а если откажешься – спрячет снова в мешок и больше 
 уже не достанет. Как обидно, когда последним предметом из мешка 
 оказывается кукла, а ты уже отказался от шляпы пирата, потому что 
-надеялся заполучить шпагу!
-</p>
-<p>
-Когда такое случилось с Ваней, папа сказал ему – не переживай, я 
-научу тебя, как выбирать подарок получше. Ты ведь знал, сколько всего 
+надеялся заполучить шпагу! Ты ведь знал, сколько всего 
 подарков в мешке?
 </p>
-
 <p>
 <i>Выбрать из потока чисел заранее известной длинны по 
 возможности наибольшее.</i>
 </p>
-
 <p>
 <strong>Входные данные:</strong>
 </p>
@@ -34,11 +28,9 @@ bag - мешок Деда Мороза – функция-генератор, в
 <p>
 accept – принять подарок - функция обратного вызова (callback function)
 </p>
-
 <p>
 <strong>Выходные данные: </strong> Нет. 
 </p>
-
 <div class="for_info_only">
 <p>
 <strong>Примеры реализации (они только демонстрируют API):</strong>
@@ -59,17 +51,15 @@ def choose_good_gift(total_gifts, bag, accept_gift):
             accept_gift()
             return
     </pre>
-
 <p class="for_info_only">
 <strong>Как использовать:</strong>
 </p>
 Например при выборе места катапультирования лётчика из неисправного 
-самолёта – чтобы безопасно приземлиться :)
+самолёта над незнакомой местностью – чтобы безопасно приземлиться.
 </p>
 <p>
 <strong>Ограничения на входные данные:</strong>
 </p>
-
 <p>
 10 &lt;= total_gifts &lt;= 1000
 </p>
