--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,47 +1,37 @@
 <p>
-     <strong>Bag of Santa Claus</strong>
+    When New Year is coming everybody waits the visit of Santa Claus.
+    He comes with a huge bag of gifts, and you can take any.
+    But how to make the best choose - so Santa gets them out of the bag one at a time,
+    and if you don't like it - puts it again to bag forever.
+    What a disappointment, when the last thing from the bag is a doll,
+    and you have already refused to pirate hat because hoping to get a saber!
+    Did you knew how much gifts in the bag?"
 </p>
 <p>
-When New Year is coming everybody waits the visit of Santa Claus. He 
-comes with a huge bag of gifts, and you can take any. But how to 
-make the best choose - so Santa gets them out of the bag one at a 
-time, and if you don't like it - puts it again to bag forever. What 
-a disappointment, when the last thing from the bag is a doll, and 
-you have already refused to pirate hat because hoping to get a saber!
-</p>
-<p>
-When this happened with John, Dad told him - don't worry, I teach 
-you how to choose a better gift. Did you knew how much gifts in the 
-bag?
-</p>
+    You are given a number of gifts in a bag.
+    The "bag" is a <a href="https://wiki.python.org/moin/Generators">generator</a> with floats --
+    prices for the gifts.
+    You can iterate this generator but only once and while you iterate the "bag" you can
+    accept a current gift by calling "accept_gift" function which is given as the third argument.
 
-<p>
-<i>Get possibly greatest number from the flow with known length.</i>
-</p>
-
-<p>
-<strong> Input: </strong>
 </p>
 <p>
-total_gifts - the number of gifts in the bag, int
+    Your function will be checked many times with different bags which have various sizes from 10 to 1000 gifts.
+    We count only the best gifts from each bag -- the second place gifts are not for us.
 </p>
 <p>
-bag - generator function returns a float (values of gifts for John, 
-positive)
+    <strong> Input: </strong> Three arguments.<br>
+    <em>total_gifts</em> - a number of gifts in a bag as an integer.<br>
+    <em>bag</em> - a generator that returns a float values of gifts.<br>
+    <em>accept_gift</em> - the callback function which you should call to accept gift.
 </p>
 <p>
-accept - callback function (call it, if you like gift)
+    <strong> Output: </strong> It does not matter.
 </p>
-
-<p>
-<strong> Imprint: </strong> None.
-</p>
-
 <div class="for_info_only">
-<p>
-<strong> Implementation examples (only to demonstrate the API): </strong>
-</p>
-<p> First: </p>
+    <p>
+        <strong> Implementation examples (only to demonstrate the API): </strong>
+    </p>
     <pre class="brush: python">
 def choose_good_gift(total_gifts, bag, accept_gift):
     for gift in bag():
@@ -49,8 +39,6 @@ def choose_good_gift(total_gifts, bag, accept_gift):
             accept_gift()
             return
     </pre>
-
-<p> Second: </p>
     <pre class="brush: python">
 def choose_good_gift(total_gifts, bag, accept_gift):
     for i, gift in enumerate(iter(bag())):
@@ -58,22 +46,15 @@ def choose_good_gift(total_gifts, bag, accept_gift):
             accept_gift()
             return
     </pre>
-
+</div>
 <p class="for_info_only">
-<strong> How to use: </strong>
-</p>
-For example, to choose time for catapult from the faulty aircraft - 
-to land safely :)
-</p>
-<p>
-<strong>Precondition:</strong>
+    <strong> How to use: </strong>
+    For example, to choose time for catapult from the faulty
+    aircraft over unacquainted terrain - to land safely.
 </p>
 <p>
-10 &lt;= total_gifts &lt;= 1000
-</p>
-<p>
-0 &lt;= gift
-</p>
-<p>
-Gifts are offered in random order.
+    <strong>Precondition:</strong><br>
+    10 &le; total_gifts &le; 1000<br>
+    0 &le; gift<br>
+    Gifts are offered in the random order.
 </p>
