--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,28 +1,26 @@
 <p>
-    When New Year is coming everybody waits the visit of Santa Claus.
-    He comes with a huge bag of gifts, and you can take any.
-    But how to make the best choose - so Santa gets them out of the bag one at a time,
-    and if you don't like it - puts it again to bag forever.
-    What a disappointment, when the last thing from the bag is a doll,
-    and you have already refused to pirate hat because hoping to get a saber!
+    When the New Year is coming, all the kids wait for a visit from Santa Claus. He comes with a huge bag of gifts, and
+    you can choose any one of them. But how to make the best choice? Santa takes gifts out of the bag one at a time, and
+    if you don't like it, he puts it back into the bag and doesn’t take it out again. This leads to some disappointing
+    situations when the last thing from the bag is a doll, and you already refused a pirate hat because hoping to get a
+    train set!
 </p>
 <p>
-    When this happened with John, Dad told him - "Don't worry,
-    I teach you how to choose a better gift. Did you knew how much gifts in the bag?"
+    When this happened with John, his Dad told him - "Don't worry,
+    I’ll teach you how to choose a better gift. Think about how many gifts are in the bag."
 </p>
 
 <p>
-    You are given a number of gifts in a bag.
-    The "bag" is a <a href="https://wiki.python.org/moin/Generators">generator</a> with floats --
-    prices for the gifts.
-    You can iterate this generator but only once and while you iterate the "bag" you can
-    accept a current gift by calling "accept_gift" function which is given as the third argument.
+    You are given the number of gifts in a bag. The "bag" is a
+    <a href="https://wiki.python.org/moin/Generators">generator</a> with floats --
+    prices for these gifts. You can iterate this generator but only once, and while you iterate the "bag", you can
+    accept a current gift by calling the "accept_gift" function which is given as the third argument.
 
 </p>
 
 <p>
-    Your function will be checked many times with different bags which have various sizes from 10 to 1000 gifts.
-    We count only the best gifts from each bag -- the second place gifts are not for us.
+    Your function will be checked repeatedly for different bags containing anywhere from 10 to 1000 gifts. We will count
+    only the best gifts from each bag as the second rate gifts are not for us.
 </p>
 
 <p>
@@ -60,8 +58,9 @@ def choose_good_gift(total_gifts, bag, accept_gift):
 
 <p class="for_info_only">
     <strong> How to use: </strong>
-    For example, to choose time for catapult from the faulty aircraft -
-    to land safely :)
+    This code can recognize optimal situations and allow you to trigger certain events during those situations. For
+    example, you could create a bot that crawls a website looking for concert tickets and automatically lets you know
+    when your favorite band is playing in your city.
 </p>
 
 <p>
