fix translate layout

--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -2,48 +2,49 @@
     <strong>Мешок Деда Мороза</strong>
 </p>
 <p>
-С приближением Нового Года все с нетерпением ждут визита Деда Мороза. 
-Он приходит с огромным мешком подарков, и один из них может достаться 
-тебе. Но как выбрать лучший – ведь Дед Мороз достаёт их из мешка по 
-одному, предлагает, а если откажешься – спрячет снова в мешок и больше 
-уже не достанет. Как обидно, когда последним предметом из мешка 
-оказывается кукла, а ты уже отказался от шляпы пирата, потому что 
-надеялся заполучить шпагу!
+    С приближением Нового Года все с нетерпением ждут визита Деда Мороза.
+    Он приходит с огромным мешком подарков, и один из них может достаться
+    тебе. Но как выбрать лучший – ведь Дед Мороз достаёт их из мешка по
+    одному, предлагает, а если откажешься – спрячет снова в мешок и больше
+    уже не достанет. Как обидно, когда последним предметом из мешка
+    оказывается кукла, а ты уже отказался от шляпы пирата, потому что
+    надеялся заполучить шпагу!
 </p>
 <p>
-Когда такое случилось с Ваней, папа сказал ему – не переживай, я 
-научу тебя, как выбирать подарок получше. Ты ведь знал, сколько всего 
-подарков в мешке?
+    Когда такое случилось с Ваней, папа сказал ему – не переживай, я
+    научу тебя, как выбирать подарок получше. Ты ведь знал, сколько всего
+    подарков в мешке?
 </p>
 
 <p>
-<i>Выбрать из потока чисел заранее известной длинны по 
-возможности наибольшее.</i>
+    <i>Выбрать из потока чисел заранее известной длинны по
+        возможности наибольшее.</i>
 </p>
 
 <p>
-<strong>Входные данные:</strong>
-</p>
-<p>  
-total_gifts - число подарков в мешке – int
+    <strong>Входные данные:</strong>
 </p>
 <p>
-bag - мешок Деда Мороза – функция-генератор, возвращает float (ценность 
-подарка в глазах Вани, положительное)
+    total_gifts - число подарков в мешке – int
 </p>
 <p>
-accept – принять подарок - функция обратного вызова (callback function)
+    bag - мешок Деда Мороза – функция-генератор, возвращает float (ценность
+    подарка в глазах Вани, положительное)
+</p>
+<p>
+    accept – принять подарок - функция обратного вызова (callback function)
 </p>
 
 <p>
-<strong>Выходные данные: </strong> Нет. 
+    <strong>Выходные данные: </strong> Нет.
 </p>
 
 <div class="for_info_only">
-<p>
-<strong>Примеры реализации (они только демонстрируют API):</strong>
-</p>
-<p>Первый:</p>
+    <p>
+        <strong>Примеры реализации (они только демонстрируют API):</strong>
+    </p>
+
+    <p>Первый:</p>
     <pre class="brush: python">
 def choose_good_gift(total_gifts, bag, accept_gift):
     for gift in bag():
@@ -51,7 +52,7 @@ def choose_good_gift(total_gifts, bag, accept_gift):
             accept_gift()
             return
     </pre>
-<p>Второй:</p>
+    <p>Второй:</p>
     <pre class="brush: python">
 def choose_good_gift(total_gifts, bag, accept_gift):
     for i, gift in enumerate(iter(bag())):
@@ -60,22 +61,25 @@ def choose_good_gift(total_gifts, bag, accept_gift):
             return
     </pre>
 
-<p class="for_info_only">
-<strong>Как использовать:</strong>
-</p>
-Например при выборе места катапультирования лётчика из неисправного 
-самолёта – чтобы безопасно приземлиться :)
-</p>
-<p>
-<strong>Ограничения на входные данные:</strong>
-</p>
+    <p class="for_info_only">
+        <strong>Как использовать:</strong>
+    </p>
+    Например при выборе места катапультирования лётчика из неисправного
+    самолёта – чтобы безопасно приземлиться :)
+    </p>
+    <p>
+        <strong>Ограничения на входные данные:</strong>
+    </p>
 
-<p>
-10 &lt;= total_gifts &lt;= 1000
-</p>
-<p>
-0 &lt;= gift
-</p>
-<p>
-Подарки извлекаются из мешка в случайном порядке.
-</p>
+    <p>
+        10 &lt;= total_gifts &lt;= 1000
+    </p>
+
+    <p>
+        0 &lt;= gift
+    </p>
+
+    <p>
+        Подарки извлекаются из мешка в случайном порядке.
+    </p>
+</div>
