--- a/translations/_ru/info/task_description.html
+++ b/translations/_ru/info/task_description.html
@@ -1,85 +1,64 @@
 <p>
-    <strong>Мешок Деда Мороза</strong>
+    Когда близится Новый год, все дети с нетерпением ждут Деда Мороза. Он приходит с огромным мешком, набитым подарками, 
+    и вы можете выбрать любой. Но как выбрать тот, что лучше всех? 
+    Дед Мороз вынимает подарки из мешка по одному, и если подарок вам не понравился, кладет его обратно и больше не достает. 
+    Это может привести к горькому разочарованию, когда из мешка последней появится кукла, 
+    а вы до этого отказались от пиратской шляпы, потому что надеялись на железную дорогу!  
 </p>
 <p>
-    С приближением Нового Года все с нетерпением ждут визита Деда Мороза.
-    Он приходит с огромным мешком подарков, и один из них может достаться
-    тебе. Но как выбрать лучший – ведь Дед Мороз достаёт их из мешка по
-    одному, предлагает, а если откажешься – спрячет снова в мешок и больше
-    уже не достанет. Как обидно, когда последним предметом из мешка
-    оказывается кукла, а ты уже отказался от шляпы пирата, потому что
-    надеялся заполучить шпагу!
-</p>
-<p>
-    Когда такое случилось с Ваней, папа сказал ему – не переживай, я
-    научу тебя, как выбирать подарок получше. Ты ведь знал, сколько всего
-    подарков в мешке?
+    Когда это случилось с Ваней, его папа сказал 
+    "Не расстраивайся, я научу тебя как выбрать лучший подарок. Обрати внимание на количество подарков в мешке." 
 </p>
 
 <p>
-    <i>Выбрать из потока чисел заранее известной длинны по
-        возможности наибольшее.</i>
+    Ваша функция будет повторно вызываться в одном и том же окружении. 
+    На каждом шаге вам предоставляется ценность показанного подарка, количество подарков в этом мешке,  
+    и порядковый номер показанного подарка (начиная с единицы). 
+    Вы должны сделать выбор - забрать подарок сейчас (True) или продолжать ждать лучшего (False).
+
 </p>
 
 <p>
-    <strong>Входные данные:</strong>
-</p>
-<p>
-    total_gifts - число подарков в мешке – int
-</p>
-<p>
-    bag - мешок Деда Мороза – функция-генератор, возвращает float (ценность
-    подарка в глазах Вани, положительное)
-</p>
-<p>
-    accept – принять подарок - функция обратного вызова (callback function)
+    Ваша функция будет запускаться для различных мешков, в которых может находиться от 10 до 10 000 подарков. 
+    Подсчитывать будем только случаи, когда выбрали лучший подарок, так как подарки второго сорта нам не подходят. 
+    Так как все вызовы отрабатывают в одном окружении, будьте осторожны с глобальными переменными. 
+    Вам необходимо выбрать не менее 700 лучших подарков из 2 000 мешков.  
 </p>
 
 <p>
-    <strong>Выходные данные: </strong> Нет.
+    <strong> Входные данные: </strong> Три аргумента.<br>
+    <em>current_gift</em> - ценность текущего подарка в виде числа с плавающей точкой.<br>
+    <em>gifts_in_bag</em> - количество подарков в мешке в виде целого числа.<br>
+    <em>gift_number</em> - порядковый номер показанного подарка в виде целого числа (в диапазоне от 1 до gifts_in_bag).<br>
+</p>
+
+<p>
+    <strong> Выходные данные: </strong> Выбираете ли вы текущий подарок в виде значения логического типа (boolean).
 </p>
 
 <div class="for_info_only">
     <p>
-        <strong>Примеры реализации (они только демонстрируют API):</strong>
+        <strong> Пример реализации (только для демонстрации программного интерфейса): </strong>
     </p>
 
-    <p>Первый:</p>
     <pre class="brush: python">
-def choose_good_gift(total_gifts, bag, accept_gift):
-    for gift in bag():
-        if gift >= 1000000:  # I want million!
-            accept_gift()
-            return
+def choose_good_gift(current_gift, gifts_in_bag, gift_number):
+    from random import random
+    # coin
+    if random() > 0.5:
+        return True
+    else:
+        return False
     </pre>
-    <p>Второй:</p>
-    <pre class="brush: python">
-def choose_good_gift(total_gifts, bag, accept_gift):
-    for i, gift in enumerate(iter(bag())):
-        if i == total_gifts // 2:  # on the middle
-            accept_gift()
-            return
-    </pre>
-
-    <p class="for_info_only">
-        <strong>Как использовать:</strong>
-    </p>
-    Например при выборе места катапультирования лётчика из неисправного
-    самолёта – чтобы безопасно приземлиться :)
-    </p>
-    <p>
-        <strong>Ограничения на входные данные:</strong>
-    </p>
-
-    <p>
-        10 &lt;= total_gifts &lt;= 1000
-    </p>
-
-    <p>
-        0 &lt;= gift
-    </p>
-
-    <p>
-        Подарки извлекаются из мешка в случайном порядке.
-    </p>
 </div>
+
+<p class="for_info_only">
+    <strong> Как это используется: </strong>
+    Этот код может распознавать оптимальные состояния и позволяет вам инциировать определенные события, привязанные к этим состояниям. Например, вы можете создать бота, который будет обходить веб-сайт в поиске билетов на концерты, и автоматически сообщать когда билеты на концерт вашей любимой группы будут дешевле всего.
+</p>
+
+<p>
+    <strong>Предусловия:</strong><br>
+    10 &le; gifts_in_bag &le; 1000<br>
+    0 &le; current_gift<br>
+    Подарки предлагаются в случайном порядке.<br>
